bk_ida/gccida/g1/do_jump_by_parts_equality_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10312:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10319:30: error: invalid suffix 'xmode' on integer constant
v4 = gen_reg_rtx( *(short *)0xmode); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10320:30: error: invalid suffix 'orce' on integer constant
v5 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10320:46: error: use of undeclared identifier 'machine_mode'
v5 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10320:6: error: use of undeclared identifier 'operand_sub'
v5 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10327:30: error: invalid suffix 'orce' on integer constant
v7 = operand_sub*(short *)0xforce( op0, v6, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10327:47: error: use of undeclared identifier 'machine_mode'
v7 = operand_sub*(short *)0xforce( op0, v6, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10327:6: error: use of undeclared identifier 'operand_sub'
v7 = operand_sub*(short *)0xforce( op0, v6, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10328:31: error: invalid suffix 'xmode' on integer constant
v8 = expand_binop( *(short *)0xmode, optab_table[19], v4, v7, v4, 1, OPTAB_WIDEN); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10336:67: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v4, const_int_rtx[64], EQ, 1, *(short *)0xmode, 0LL, if_false_label, if_true_label); 
                                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10349:18: error: invalid suffix 'xmode' on integer constant
v10 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10351:31: error: invalid suffix 'orce' on integer constant
v12 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10351:47: error: use of undeclared identifier 'machine_mode'
v12 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/expr.c:10351:7: error: use of undeclared identifier 'operand_sub'
v12 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)*( ( unsigned __int8 *)op0 + 2)); 
      ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_jump_by_parts_equality_rtx/src/obj/expr.o] Error 1
